--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Igor Klyushnyov
 maintainer=Igor Klyushnyov
 sentence=Menu on LCD with button, joystick or encoder controller
 paragraph=Menu & controller classes
-category=LiquidCrystal,Menu,Manipulators
+category=Display
 url=https://github.com/inklu/LCDMenu
 architectures=*
